Move setting of feature groups to the beginning and end of SetRuntimeFeatureDefaultsForPlatform

Over time, individual features were added before or after the calls that
set groups of features. This could lead to different behavior for
individual features. Therefore, this CL moves them back to their
original position and adds comments to hopefully deter such future
changes.

This CL does not attempt to modify overall order (issue 832393).

Bug: 830978
Change-Id: I83df46b733751a0e9f1272c214518a3bdc67b199
Reviewed-on: https://chromium-review.googlesource.com/1013212
Reviewed-by: Ian Clelland <iclelland@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: David Dorwin <ddorwin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551203}
Former-commit-id: 9a82f49e4c456d5298443fa3126ca723f3e5bc65